# dynamic_types_in_rust

./: Cargo.toml
.cargo/: config.toml
src/: dynamic_types.rs  main.rs
